--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 	<title>Spaceship Game</title>
 </head>
 <body>
+  <p>You're in space, yo</p>
+  <p id=position>Your position is x y</p>
+  <button id=moveButton>Move</button>
   <script type="text/javascript" src="main.js"></script>
 </body>
