you can move about

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <p>You're in space, yo</p>
-  <p id=position>Your position is x y</p>
+  <p id=positionText>Your position is x y</p>
   <button id=moveButton>Move</button>
+  <form><input id=moveDistanceBox size=2></form>
   <script type="text/javascript" src="main.js"></script>
 </body>
