Rough but technically complete version of movement
basically only works if you're playing nice, and need refactored badly.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
   <p>You're in space, yo</p>
   <p id=positionText>Your position is x y</p>
-  <button id=moveButton>Move</button>
-  <form><input id=moveDistanceBox size=2></form>
+  <button id=moveXButton>Move X</button>
+  <button id=moveYButton>Move Y</button>
+  <form><input id=moveXDistanceBox size=2>
+        <input id=moveYDistanceBox size=2></form>
   <script type="text/javascript" src="main.js"></script>
 </body>
