Does the name thing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="interface.css" />
 	<title>Spaceship Game</title>
+  <p id=spaceMan>You're in space, man</p>
 </head>
 <body>
   <script type="text/javascript" src="main.js"></script>
